--- a/files/supervisord.conf
+++ b/files/supervisord.conf
@@ -21,10 +21,10 @@ autostart=true
 autorestart=true
 
 ;sshd
-[program:sshd]
-command=/usr/sbin/sshd -D -e  ; (-D start in foreground; -e show some log messages)
-autostart=true
-autorestart=true
+;[program:sshd]
+;command=/usr/sbin/sshd -D -e  ; (-D start in foreground; -e show some log messages)
+;autostart=true
+;autorestart=true
 
 ;openproject
 [program:openproject]
